--- a/Peace Foundation/index.html
+++ b/Peace Foundation/index.html
@@ -104,8 +104,8 @@
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <div class="button">
-                        <a href="/account">Book Appointment</a>
-                        <a href="">Donate</a>
+                        <a href="/users/volunteer">Be a Volunteer</a>
+                        <button id="show-donate" type="button">Donate</button>
                     </div>
                 </div>
                 <div class="social">
@@ -246,7 +246,7 @@
                 <p>Bank Name: xxxxxxxxxxx</p>
                 <p>Account Name: xxxxxxxxxxxx</p>
                 <p>Bank Account Number: xxxxxx</p>
-                <p>ISFC Code: xxxxxxxx</p>
+                <p>IFSC Code: xxxxxxxx</p>
 
             </div>
 
